--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 body {
-    background: rgb(187, 255, 201);
-    background: linear-gradient(0deg, rgb(192, 255, 187) 34%, rgb(240, 255, 228) 100%);
+    background: #B8D1DD;
 }
